---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: fib_loop.cm
============================================================
Source code:
func fibonacci_loop(n: felt) -> felt {
    let a = 0;
    let b = 1;
    let i = 0;
    while (i != n) {
        let temp = a;
        a = b;
        b = b + temp;
        i = i + 1;
    }
    return a;
}

func main() -> felt {
    let n = 10;
    let result = fibonacci_loop(n);
    return result;
}

============================================================
Generated CASM:
fibonacci_loop:
fibonacci_loop:
fibonacci_loop_0:
   0: 6 0 _ 0              // Store immediate: [fp + 0] = 0
   1: 6 1 _ 1              // Store immediate: [fp + 1] = 1
   2: 6 0 _ 2              // Store immediate: [fp + 2] = 0
fibonacci_loop_1:
   3: 2 2 -4 3             // [fp + 3] = [fp + 2] op [fp + -4]
   4: 31 3 2 _             // if [fp + 3] != 0 jmp rel fibonacci_loop_2
   5: 20 11 _ _            // jump abs fibonacci_loop_3
fibonacci_loop_2:
   6: 4 0 _ 4              // Store: [fp + 4] = [fp + 0]
   7: 4 1 _ 0              // Store: [fp + 0] = [fp + 1]
   8: 0 1 4 1              // [fp + 1] = [fp + 1] op [fp + 4]
   9: 1 2 1 2              // [fp + 2] = [fp + 2] op 1
  10: 20 3 _ _             // jump abs fibonacci_loop_1
fibonacci_loop_3:
  11: 4 0 _ -3             // Return value 0: [fp -3] = [fp + 0]
  12: 15 _ _ _             // return
main:
  13: 6 10 _ 0             // Store immediate: [fp + 0] = 10
  14: 12 2 0 _             // call fibonacci_loop
  15: 4 1 _ 3              // Store: [fp + 3] = [fp + 1]
  16: 4 3 _ -3             // Return value 0: [fp -3] = [fp + 3]
  17: 15 _ _ _             // return
